# bizhi

./: Cargo.toml  README.md
.github/workflows/: windows-build.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: architecture.md
ipc/: Cargo.toml
ipc/src/: lib.rs
wallpaper_host/: Cargo.toml
wallpaper_host/src/: main.rs
