[workspace]
members = [
  "common",
  "ipc",
  "wallpaper_host"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
  "Win32_System_Power",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
thiserror = "1.0"
serde_json = "1.0"
