[package]
name = "wallpaper_host"
version = "0.1.0"
edition = "2024"
description = "Native Windows wallpaper host that controls DXGI, Media Foundation, and IPC bridges."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true
ipc = { path = "../ipc" }
common = { path = "../common" }
